chore(developer-guide): update figure path in Rmd files to point to the tutorial directory

--- a/vignettes/developer-guide.Rmd
+++ b/vignettes/developer-guide.Rmd
@@ -34,7 +34,7 @@ Ensure that in the Rmd file, you configure the figure path to a subdirectory und
 knitr::opts_chunk$set(
   collapse = TRUE,
   comment = "#>",
-  fig.path = "./developer-guide/",
+  fig.path = "./tutorial/",
   dev = "svg",
   fig.ext = "svg"
 )
