--- a/vignettes/00-framework-overview.Rmd
+++ b/vignettes/00-framework-overview.Rmd
@@ -13,13 +13,12 @@ knitr::opts_chunk$set(
 )
 ```
 
-Evidence accumulation models (EAMs) are major approaches for modeling responses and reaction times in cognitive tasks. The **eam** package provide a simulation-based framework for simulating and fitting
-EAMs for single- and multiple-response tasks. 
+Evidence accumulation models (EAMs) are major approaches for modeling responses and reaction times in cognitive tasks. The **eam** package provide a simulation-based framework for simulating and fitting EAMs for single- and multiple-response tasks.
 
 
-The **eam** package consists of two parts: 
+The **eam** package consists of two parts:
 
-\textbf{a modular simulation engine} that allows users to flexibly customize models and simulate data; 
+\textbf{a modular simulation engine} that allows users to flexibly customize models and simulate data;
 
 \textbf{a simulation-based inference module} for reliable parameter inference without requiring a tractable likelihood.
 
@@ -27,71 +26,38 @@ In this section, we introduce these two components in detail and demonstrate how
 
 ## Modular simulation engine
 
-The modular simulation engine is built upon a generalized evidence accumulation framework, within which we assume that decision making is characterized
-as a stochastic process in which evidence is continuously collected over
-time. The accumulation unfolds in infinitesimal increments $dt$, which
-can be approximated in practice with very small time steps (for example,
-1\,\emph{ms}). The moment-to-moment change in accumulated evidence
-$x(t)$ can be expressed as a stochastic differential:
+The modular simulation engine is built upon a generalized evidence accumulation framework, within which we assume that decision making is characterized as a stochastic process in which evidence is continuously collected over time. The accumulation unfolds in infinitesimal increments $dt$, which can be approximated in practice with very small time steps (for example, 1\,\emph{ms}). The moment-to-moment change in accumulated evidence $x(t)$ can be expressed as a stochastic differential:
 \[
 dx(t) = v \cdot dt + s \cdot \sigma,
 \]
 where $v$ is the drift rate, $dt$ is a time step, $s$ is the noise
 scaling parameter, and $\sigma$ is a diffusion noise term.
 
-As the process unfolds, the accumulated evidence $x(t)$ continues to
-evolve until it reaches the decision boundaries, at which point a
-response is triggered and the corresponding RT is recorded.
-The distance to reaching the boundary is jointly determined by two
-parameters: the decision boundary ($a$) and the starting point ($z$). As
-evidence accumulates, the process continues until $x(t) + z$ first
-reaches either the upper boundary $a$ or falls below the lower boundary
-0 (in two-boundary EAMs). The elapsed time from the start of
-accumulation to this boundary crossing defines the decision time; adding
-a non-decision time $t_{0}$ yields the observable RT.
+As the process unfolds, the accumulated evidence $x(t)$ continues to evolve until it reaches the decision boundaries, at which point a response is triggered and the corresponding RT is recorded. The distance to reaching the boundary is jointly determined by two parameters: the decision boundary ($a$) and the starting point ($z$). As evidence accumulates, the process continues until $x(t) + z$ first reaches either the upper boundary $a$ or falls below the lower boundary 0 (in two-boundary EAMs). The elapsed time from the start of accumulation to this boundary crossing defines the decision time; adding a non-decision time $t_{0}$ yields the observable RT.
 
 ![Procedures of simulation engines in the eam package](./00-framework-overview/procedures.svg)
 
 The modular simulation engine composes ten modules (see Figure 1):
 
-  \textbf{Number of accumulators}: the number of accumulators that race or
-  compete toward a decision boundary (e.g., one in DDM or LFM; multiple
-  in LBA, LCA, or RDM)
+  \textbf{Number of accumulators}: the number of accumulators that race or compete toward a decision boundary (e.g., one in DDM or LFM; multiple in LBA, LCA, or RDM)
 
-  \textbf{Prior distribution of hyperparameters}: hierarchical priors specifying 
-  mean, variance, and regression coefficients for core parameters of the evidence-accumulation process including drift rate, decision boundary, 
-  starting point/relative bias,
-  non-decision time, leakage parameter, strength of lateral inhibition,
-  and stability parameter.
+  \textbf{Prior distribution of hyperparameters}: hierarchical priors specifying mean, variance, and regression coefficients for core parameters of the evidence-accumulation process including drift rate, decision boundary, starting point/relative bias, non-decision time, leakage parameter, strength of lateral inhibition, and stability parameter.
 
-  \textbf{Between-trial variability}: specify the formulas for between-subject or
-  between-trial variability in parameters, also allowing linking covariates to the subject- or trial-level parameters.
+  \textbf{Between-trial variability}: specify the formulas for between-subject or between-trial variability in parameters, also allowing linking covariates to the subject- or trial-level parameters.
 
-  \textbf{Item-level formula}: linking each accumulator's parameter to
-  item indexes or output positions to generate the accumulator-level
-    parameter values such as drift rate or decision boundary, also allowing
-  linking covariates to the item-level parameters.
+  \textbf{Item-level formula}: linking each accumulator's parameter to item indexes or output positions to generate the accumulator-level parameter values such as drift rate or decision boundary, also allowing linking covariates to the item-level parameters.
 
-  \textbf{Type of noise}: family of diffusion noise
-  (e.g., Gaussian vs.\ Lévy $\alpha$-stable vs.\ deterministic
-  ballistic).
+  \textbf{Type of noise}: family of diffusion noise (e.g., Gaussian vs.\ Lévy $\alpha$-stable vs.\ deterministic ballistic).
 
-  \textbf{Simulation setting}: the configuration used for model simulation,
-  including model equations, number of conditions, number of trials per
-  condition, and other implementation parameters.
+  \textbf{Simulation setting}: the configuration used for model simulation, including model equations, number of conditions, number of trials per condition, and other implementation parameters.
 
-  \textbf{Rules to record responses}: the criteria determining when and how
-  responses are recorded (e.g., first boundary crossing only,
-  or the first $n$ releases within a time limit).
+  \textbf{Rules to record responses}: the criteria determining when and how responses are recorded (e.g., first boundary crossing only, or the first $n$ releases within a time limit).
 
-  \textbf{Time step}: the discrete increment used to approximate continuous-time
-  evidence accumulation (default at 1\,\emph{ms}).
+  \textbf{Time step}: the discrete increment used to approximate continuous-time evidence accumulation (default at 1\,\emph{ms}).
 
-  \textbf{Noise setting}: the algorithmic specification of stochastic increments
-  (e.g., additive vs.\ multiplicative).
+  \textbf{Noise setting}: the algorithmic specification of stochastic increments (e.g., additive vs.\ multiplicative).
 
-  \textbf{Type of model}: the underlying architecture of evidence accumulation
-  (e.g., single-boundary vs.\ double-boundary vs.\ LCA accumulators).
+  \textbf{Type of model}: the underlying architecture of evidence accumulation (e.g., single-boundary vs.\ double-boundary vs.\ LCA accumulators).
 
 
 By combining different modular components, the engine can simulate responses and
@@ -99,14 +65,11 @@ RTs from many representative EAMs (see the section [Models in eam](./20-models-i
 
 ## Simulation-based inference module
 
-The simulation-based inference module includes two major apporaches: Approximate
-Bayesian Computation (ABC; Csilléry et al., 2012) and Amortized Bayesian Inference (ABI; Sainsbury-Dale et al., 2024). These methods can estimate the posteiror distribution of parameters via the comparsion between simulated and observed data, bypassing the need for likelihood functions.
+The simulation-based inference module includes two major apporaches: Approximate Bayesian Computation (ABC; Csilléry et al., 2012) and Amortized Bayesian Inference (ABI; Sainsbury-Dale et al., 2024). These methods can estimate the posteiror distribution of parameters via the comparsion between simulated and observed data, bypassing the need for likelihood functions.
 
 ### Approximate Bayesian Computation (ABC)
 
-The Approximate Bayesian Computation (ABC) approximates the posterior distribution
-by comparing summary statistics from simulated data 
-$y_{\text{sim}}$ and observed data $y_{\text{obs}}$:
+The Approximate Bayesian Computation (ABC) approximates the posterior distribution by comparing summary statistics from simulated data $y_{\text{sim}}$ and observed data $y_{\text{obs}}$:
 
 \[
 p_{\varepsilon}(\theta \mid y_{\text{obs}}) \propto 
@@ -118,23 +81,13 @@ where $S(\cdot)$ denotes a vector of summary statistics, $\rho(\cdot)$
 is a distance function, and $K_{\varepsilon}$ is a kernel with tolerance
 $\varepsilon$.
 
-Here, the intractable likelihood is replaced by a kernel-weighted similarity between summary statistics of simulated and observed data, such that parameters producing simulations closer to the observed data receive higher posterior weight, with the tolerance 
-$\varepsilon$ controlling the approximation accuracy. 
+Here, the intractable likelihood is replaced by a kernel-weighted similarity between summary statistics of simulated and observed data, such that parameters producing simulations closer to the observed data receive higher posterior weight, with the tolerance $\varepsilon$ controlling the approximation accuracy.
 
-In the classical Rejection ABC algorithm, for each 
-iteration $i=1,\dots,N$: 
-(1) draw $\theta_i \sim \pi(\theta)$; 
-(2) simulate $y_{\text{sim}} \sim M(\theta_i)$; 
-(3) compute 
-$d_i = \rho(S(y_{\text{sim}}), S(y_{\text{obs}}))$; 
-(4) accept $\theta_i$ if $d_i \le \varepsilon$. 
+In the classical Rejection ABC algorithm, for each iteration $i=1,\dots,N$: (1) draw $\theta_i \sim \pi(\theta)$; (2) simulate $y_{\text{sim}} \sim M(\theta_i)$; (3) compute $d_i = \rho(S(y_{\text{sim}}), S(y_{\text{obs}}))$; (4) accept $\theta_i$ if $d_i \le \varepsilon$.
 
-This produces the approximate posterior $\pi_{\varepsilon}(\theta \mid y)$. 
+This produces the approximate posterior $\pi_{\varepsilon}(\theta \mid y)$.
 
-However, the Rejection ABC algorithm suffers from low acceptance rates and a 
-bias–variance trade-off in the tolerance $\varepsilon$. 
-To address this, Beaumont et al. (2002)
-proposed a local linear regression adjustment:
+However, the Rejection ABC algorithm suffers from low acceptance rates and a bias–variance trade-off in the tolerance $\varepsilon$. To address this, Beaumont et al. (2002) proposed a local linear regression adjustment:
 \[
 \theta_i = \alpha + 
 \left(S(y_{\text{sim}}) - S(y_{\text{obs}})\right)^{T}\beta + \zeta_i,
@@ -146,56 +99,27 @@ which is then adjusted toward $S(y_{\text{obs}})$:
 \]
 This adjustment allows simulated samples that would otherwise fall outside the tolerance to be shifted into the acceptance region, which increases the acceptance rate and reduces sensitivity to the choice of $\epsilon$.
 
-Following this direction, Ridge regression adjustment 
-extends it by projecting summary statistics into a 
-high-dimensional RKHS using kernels (e.g., Gaussian RBF), enabling 
-nonlinear estimation of $\mathbb{E}[\theta \mid s]$. Blum et al. (2010) proposed a 
-nonlinear, heteroscedastic regression model:
+Following this direction, Ridge regression adjustment extends it by projecting summary statistics into a high-dimensional RKHS using kernels (e.g., Gaussian RBF), enabling nonlinear estimation of $\mathbb{E}[\theta \mid s]$. Blum et al. (2010) proposed a nonlinear, heteroscedastic regression model:
 \[
 \theta = m(s) + \sigma(s)\cdot \zeta,
 \]
-with $m(\cdot)$ and $\log(\sigma^2(\cdot))$ estimated using neural
-networks with weight decay on accepted $(\theta_i, s_i)$ pairs. 
-This correction improves robustness in high-dimensional summary spaces 
-and mitigates the curse of dimensionality.
+with $m(\cdot)$ and $\log(\sigma^2(\cdot))$ estimated using neural networks with weight decay on accepted $(\theta_i, s_i)$ pairs. This correction improves robustness in high-dimensional summary spaces and mitigates the curse of dimensionality.
 
 ### Amortized Bayesian Inference (ABI)
 
-While methods such as ABC require running inference each time new
-ABI allows one to first train 
-a neural network that learns a mapping between the parameter space and the 
-data (or summary statistics), and then reuse this learned mapping to directly infer
-parameters in subsequent analyses without repeated optimization. 
+While methods such as ABC require running inference each time new ABI allows one to first train a neural network that learns a mapping between the parameter space and the data (or summary statistics), and then reuse this learned mapping to directly infer parameters in subsequent analyses without repeated optimization.
 
-Existing implementations of 
-amortized Bayesian inference (ABI) in this package are neural Bayes estimators and neural posterior 
-inference.
+Existing implementations of amortized Bayesian inference (ABI) in this package are neural Bayes estimators and neural posterior inference.
 
-Neural Bayes estimators aim to find decision rules that minimize the
-Bayes risk under a chosen loss $L(\theta,\widehat{\theta}(Z))$ and prior
-$\pi(\theta)$:
+Neural Bayes estimators aim to find decision rules that minimize the Bayes risk under a chosen loss $L(\theta,\widehat{\theta}(Z))$ and prior $\pi(\theta)$:
 \[
 \min_{\widehat{\theta}}
 \int_{\Theta}\int_{Z}
 L(\theta,\widehat{\theta}(Z))\, p(Z \mid \theta)\,\pi(\theta)\, dZ\, d\theta,
 \]
-where $\theta$ is the latent true parameter and $\widehat{\theta}(Z)$ is
-the estimator produced from data (or summary statistics) $Z$.
-The loss function may be chosen flexibly (e.g., quadratic, absolute,
-quantile loss), leading to different Bayesian optimal decision rules
-(e.g., posterior mean, median, quantiles). By optimizing the loss
-function via backpropagation and stochastic gradient descent using
-simulated $(\theta, Z)$ pairs, neural Bayes estimators amortize the cost
-of inference. Once trained, the network can be applied repeatedly to new
-observed data to produce fast and accurate point estimates with
-essentially zero additional inference cost.
+where $\theta$ is the latent true parameter and $\widehat{\theta}(Z)$ is the estimator produced from data (or summary statistics) $Z$. The loss function may be chosen flexibly (e.g., quadratic, absolute, quantile loss), leading to different Bayesian optimal decision rules (e.g., posterior mean, median, quantiles). By optimizing the loss function via backpropagation and stochastic gradient descent using simulated $(\theta, Z)$ pairs, neural Bayes estimators amortize the cost of inference. Once trained, the network can be applied repeatedly to new observed data to produce fast and accurate point estimates with essentially zero additional inference cost.
 
-Neural posterior estimators, on the other hand, aim to approximate the
-entire posterior distribution $p(\theta\mid Z)$ by learning a mapping
-from data to the parameters of a chosen distribution family
-$\kappa(\cdot): Z \to K$ through minimization of the expected
-Kullback--Leibler divergence between the
-true posterior and the approximating distribution:
+Neural posterior estimators, on the other hand, aim to approximate the entire posterior distribution $p(\theta\mid Z)$ by learning a mapping from data to the parameters of a chosen distribution family $\kappa(\cdot): Z \to K$ through minimization of the expected Kullback--Leibler divergence between the true posterior and the approximating distribution:
 \[
 \kappa^{\ast}(\cdot)
   = \arg\min_{\kappa(\cdot)}
@@ -203,42 +127,24 @@ true posterior and the approximating distribution:
       KL\!\left( p(\theta\mid Z)\;\middle\|\; q(\theta;\kappa(Z)) \right)
     \right],
 \]
-where $\kappa^{\ast}(\cdot)$ is the trained neural estimator,
-$q(\theta;\kappa(Z))$ is the approximated posterior family, and the
-expectation is taken over all possible realizations of $Z$. 
+where $\kappa^{\ast}(\cdot)$ is the trained neural estimator, $q(\theta;\kappa(Z))$ is the approximated posterior family, and the expectation is taken over all possible realizations of $Z$.
 
 ## A standard workflow in the **eam** package
 
-A standard procedure of simulation-based inference involves several
-steps:
+A standard procedure of simulation-based inference involves several steps:
 
-First, a generative model or simulator $M(\theta)$ is defined,
-which specifies how observable data $y$ are generated from underlying
-parameters $\theta$. Second, parameters are sampled from a prior
-distribution $\pi(\theta)$, reflecting prior beliefs or theoretical
-constraints. Third, for each sampled parameter value, synthetic datasets
-$y_{\text{sim}}$ are simulated from the model, producing pairs of
-parameters and corresponding simulated observations. Fourth, the
-similarity between simulated and observed data is quantified—either by
-computing distance metrics between summary statistics, as in Approximate
-Bayesian Computation (ABC) or Amortized Bayesian Inference (ABI). Finally, the approximate posterior distribution $p(\theta \mid
-y_{\text{obs}})$ is obtained by weighting or sampling parameters
-according to this similarity or likelihood estimate.
+First, a generative model or simulator $M(\theta)$ is defined, which specifies how observable data $y$ are generated from underlying parameters $\theta$. Second, parameters are sampled from a prior distribution $\pi(\theta)$, reflecting prior beliefs or theoretical constraints. Third, for each sampled parameter value, synthetic datasets $y_{\text{sim}}$ are simulated from the model, producing pairs of parameters and corresponding simulated observations. Fourth, the similarity between simulated and observed data is quantified—either by computing distance metrics between summary statistics, as in Approximate Bayesian Computation (ABC) or Amortized Bayesian Inference (ABI). Finally, the approximate posterior distribution $p(\theta \mid y_{\text{obs}})$ is obtained by weighting or sampling parameters according to this similarity or likelihood estimate.
 
 ![The standard workflow in the **eam** package](./00-framework-overview/workflow.svg)
 \bigskip
 
-The following sections provide a structured overview of the standard simulation
-and inference workflow supported by the package.
+The following sections provide a structured overview of the standard simulation and inference workflow supported by the package.
 
 \textbf{Section 1} [Getting Started: A Minimal Working Example](./10-minimal-working-example.html) introduces the core functions of the package and provides a minimal runnable example based on a three-parameter Drift Diffusion Model (DDM).
 
-\textbf{Section 2} [Models in eam](./20-models-in-eam.html) demonstrates how representative evidence accumulation models can be
-specified within the package, and how they can be extended to multi-response
-settings or intergeted with covariates. 
+\textbf{Section 2} [Models in eam](./20-models-in-eam.html) demonstrates how representative evidence accumulation models can be specified within the package, and how they can be extended to multi-response settings or intergeted with covariates.
 
-\textbf{Section 3} [An Empirical Example: Simulation-Based Inference for Free Recall](./30-empirical-example.html) presents a real-world application using free recall data, illustrating
-how the package can be applied to empirical datasets in practice.
+\textbf{Section 3} [An Empirical Example: Simulation-Based Inference for Free Recall](./30-empirical-example.html) presents a real-world application using free recall data, illustrating how the package can be applied to empirical datasets in practice.
 
 
 Reference:
@@ -258,3 +164,4 @@ https://doi.org/10.1111/j.2041-210x.2011.00179.x
 Sainsbury-Dale, M., Zammit-Mangion, A., & Huser, R. (2024). Likelihood-free parameter
 estimation with neural Bayes estimators. The American Statistician, 78 (1), 1–14.
 https://doi.org/10.1080/00031305.2023.2275927
+
