docs(tutorials): upload Guangyu's edited tutorials

--- a/vignettes/10-minimal-working-example.Rmd
+++ b/vignettes/10-minimal-working-example.Rmd
@@ -40,7 +40,7 @@ In this example, we start with a simple three-parameter two-boundary Diffusion D
 
 Although the DDM has a trackable likelihood, we deliberately treat it as a generative model here. This allows us to demonstrate the full simulation-based workflow in a setting where the ground truth is known.
 
-Here, we adopt a slightly different parameterization from the conventional DDM: instead of assuming accumulation from a positive starting point toward 0 or a a, evidence is initialized at zero and evolves toward symmetric bounds at a and -a.
+Here, we adopt a slightly different parameterization from the conventional DDM: instead of assuming accumulation from a positive starting point toward 0 or $a$, evidence is initialized at zero and evolves toward symmetric bounds at $a$ and $-a$.
 
 The details of this model is listed below:
 
@@ -171,9 +171,9 @@ sim_output <- run_simulation(
 )
 ```
 
-For observed data, we create a small dataset using the **rtdists** package, which provides fast simulators for standard DDM. Specifically, we simulate N=500 trials from a two-boundary DDM with fixed parameters (a,v,t) where a controls boundary separation, v is the drift rate, and t0 captures non-decision time.
+For observed data, we create a small dataset using the **rtdists** package, which provides fast simulators for standard DDM. Specifically, we simulate N=500 trials from a two-boundary DDM with fixed parameters ($a$,$v$,$t0$) where a controls boundary separation, $v$ is the drift rate, and $t0$ captures non-decision time.
 
-The function rdiffusion() returns response labels (“upper”/“lower”) and response times. For consistency with the data format produced by our simulation engine, we recode responses into a numeric choice variable (1 for the upper boundary and -1 for the lower boundary), and we add a condition_idx field to indicate that all trials belong to a single experimental condition
+The function *rdiffusion()* returns response labels (“upper”/“lower”) and response times. For consistency with the data format produced by our simulation engine, we recode responses into a numeric choice variable (1 for the upper boundary and -1 for the lower boundary), and we add a condition_idx field to indicate that all trials belong to a single experimental condition
 
 
 ``` r
@@ -202,7 +202,7 @@ observed_data$condition_idx <- 1
 
 we define a summary pipeline that extracts two types of common summary statistics of the DDM data: (i) the accuracy and (ii) RT quantiles (10%, 30%, 50%, 70%, 90%) computed separately for each choice category (1 vs. -1).
 
-We then apply the same summary procedure to every simulated dataset to obtain **simulation_sumstat**, and to the observed dataset to obtain **target_sumstat**. Finally, build_abc_input() aligns the simulated and observed summaries into a consistent structure.
+We then apply the same summary procedure to every simulated dataset to obtain *simulation_sumstat*, and to the observed dataset to obtain *target_sumstat*. Finally, build_abc_input() aligns the simulated and observed summaries into a consistent structure.
 
 
 ``` r
@@ -247,7 +247,7 @@ Specifically, we fit an ABC model by comparing the simulated summary statistics 
 
 Here we use a neural-net-adjusted ABC variant (method = "neuralnet"), which learns a flexible mapping from summary statistics to parameters to improve posterior approximation.
 
-These diagnostics help verify whether the posterior concentrates on plausible regions of the parameter space and whether the recovered parameters are consistent with the parameters in the rdiffusion() model.
+These diagnostics help verify whether the posterior concentrates on plausible regions of the parameter space and whether the recovered parameters are consistent with the parameters in the *rdiffusion()* model.
 
 
 ``` r
@@ -284,7 +284,6 @@ summarise_posterior_parameters(
 #> 2       V_0 1.9133499 1.9342754      1.7349258      2.0046695
 #> 3     ndt_0 0.4854268 0.4860683      0.4370122      0.5083276
 
-
 plot_posterior_parameters(
   abc_fit,
   abc_input
@@ -293,13 +292,11 @@ plot_posterior_parameters(
 
 ![plot of chunk unnamed-chunk-8](./10-minimal-workflow/unnamed-chunk-8-1.svg)
 
-The next step is to evaluate parameter recovery for the model. To do so, we run cv4abc() as a cross-validation procedure.
+The next step is to evaluate parameter recovery for the model. To do so, we run *cv4abc()* as a cross-validation procedure.
 
 First, we specify the number of validation datasets (N=100). The function then randomly samples N conditions from the simulated summary statistics, treats their associated parameter values as known ground truth, and re-estimates the parameters using the fitted ABC object under the same tolerance level.
 
-
-
-Recovery performance is visualized using plot_cv_recovery(), which compares the estimated parameters with their true values across validation datasets.
+Recovery performance is visualized using *plot_cv_recovery()*, which compares the estimated parameters with their true values across validation datasets.
 
 Good recovery is indicated by a high correlation between estimated and true parameters (good: $r \ge 0.75$; excellent: $r \ge 0.90$) and by estimates clustering closely around the identity line with minimal residual dispersion.
 
@@ -319,7 +316,7 @@ plot_cv_recovery(
 )
 ```
 
-![plot of chunk unnamed-chunk-10](./10-minimal-workflow/unnamed-chunk-10-1.svg)
+![plot of chunk unnamed-chunk-9](./10-minimal-workflow/unnamed-chunk-9-1.svg)
 
 As a final diagnostic, we perform a posterior predictive check to assess the adequacy of the fitted model.
 
@@ -381,7 +378,7 @@ plot_rt(
 )
 ```
 
-![plot of chunk unnamed-chunk-11](./10-minimal-workflow/unnamed-chunk-11-1.svg)
+![plot of chunk unnamed-chunk-10](./10-minimal-workflow/unnamed-chunk-10-1.svg)
 
 ``` r
 
@@ -393,13 +390,13 @@ plot_accuracy(
 )
 ```
 
-![plot of chunk unnamed-chunk-11](./10-minimal-workflow/unnamed-chunk-11-2.svg)
+![plot of chunk unnamed-chunk-10](./10-minimal-workflow/unnamed-chunk-10-2.svg)
 
 Beyond parameter estimation, the **eam** package also supports model comparison within a simulation-based inference framework.
 
 In this example, we construct an alternative model by deliberately modifying the prior specification of the relative starting point parameter $\rho$, while keeping all other components of the model unchanged. This allows us to isolate the contribution of this parameter assumption to overall model fit. Synthetic data are then generated under the alternative model, and the same summary statistics pipeline is applied to ensure comparability across models.
 
-Model comparison is conducted using the abc_postpr() function, which estimates posterior model probabilities based on Approximate Bayesian Computation. Intuitively, this procedure assesses which model is more likely to have generated the observed data by comparing the proximity of simulated summary statistics from each model to the target summary statistics, given a fixed tolerance level.
+Model comparison is conducted using the *abc_postpr()* function, which estimates posterior model probabilities based on Approximate Bayesian Computation. Intuitively, this procedure assesses which model is more likely to have generated the observed data by comparing the proximity of simulated summary statistics from each model to the target summary statistics, given a fixed tolerance level.
 
 The resulting posterior probabilities indicate the relative likelihood that the observed data were generated by each candidate model. These probabilities can be summarized using Bayes factors, which quantify the strength of evidence in favor of one model over another. Conventionally, Bayes factors greater than 3 or smaller than 1/3 are interpreted as providing substantial evidence for one model relative to its competitor.
 
@@ -468,13 +465,17 @@ summary(postpr_result)
 #> 
 #> Proportion of accepted simulations (rejection):
 #> model_1 model_2 
-#>    0.87    0.13 
+#>    0.59    0.41 
 #> 
 #> Bayes factors:
 #>         model_1 model_2
-#> model_1  1.0000  6.6923
-#> model_2  0.1494  1.0000
+#> model_1  1.0000  1.4390
+#> model_2  0.6949  1.0000
 ```
+
+According to the results, the model comparison indicated moderate evidence in favor of the model with $\rho = 0.5$ (the correct $\rho$ configuration) over the model with $\rho = 0.7$ (the incorrect $\rho$ configuration), with a posterior probability of 0.87 and a Bayes factor of approximately 6.7.
+
+This is the end of this example.
 
 This simple DDM example serves as a reference template for the rest of the tutorial. Once this workflow is clear, extending it to more complex models in eam mainly involves modifying the model components, while the overall inference pipeline remains unchanged.
 
