docs(tutorials): compile tutorial "Models in eam"

--- a/vignettes/20-models-in-eam.Rmd
+++ b/vignettes/20-models-in-eam.Rmd
@@ -616,7 +616,7 @@ simulation_sumstat <- map_by_condition(
 ```
 
 
-## Multi-response EAMs
+## Multi-response EAM
 
 To simulate a multi-response EAM, we introduced two additional components: a position-dependent decision boundary function and an item-dependent drift rate function.
 
