--- a/vignettes/10-minimal-working-example.Rmd
+++ b/vignettes/10-minimal-working-example.Rmd
@@ -26,21 +26,15 @@ Concretely, the workflow consists of four steps:
 The following sections walk through these steps in detail using a simple DDM
 example, before extending the workflow to more complex models.
 
-
-``` r
-# Load necessary packages
-library(eam)
-library(dplyr)
-
-# Set a random seed for reproducibility
-set.seed(1)
-```
+---
 
 In this example, we start with a simple three-parameter two-boundary Diffusion Decision Model (DDM).
 
 Although the DDM has a trackable likelihood, we deliberately treat it as a generative model here. This allows us to demonstrate the full simulation-based workflow in a setting where the ground truth is known.
 
 Here, we adopt a slightly different parameterization from the conventional DDM: instead of assuming accumulation from a positive starting point toward 0 or $a$, evidence is initialized at zero and evolves toward symmetric bounds at $a$ and $-a$.
+
+### Description of the model
 
 The details of this model is listed below:
 
@@ -75,6 +69,23 @@ A decision is made when $X(t)$ first reaches either $A_{\text{upper}}$ or $A_{\t
 \[
 RT = T_{\text{decision}} + ndt .
 \]
+
+
+### Step one: Model setup
+
+First, we load the required packages.
+
+
+``` r
+# Load necessary packages
+library(eam)
+library(dplyr)
+
+# Set a random seed for reproducibility
+set.seed(1)
+```
+
+Then, we specify the model configuration according to the setup described above.
 
 
 ``` r
@@ -126,6 +137,10 @@ noise_factory <- function(context) {
 }
 ```
 
+---
+
+### Step two: Data simulation
+
 Once the model is specified, we can proceed to data simulation. The simulation step generates a large collection of synthetic datasets by sampling parameters from their prior distributions and simulating data from the corresponding generative model. Each simulated dataset represents a possible outcome implied by the assumed model.
 
 
@@ -171,6 +186,10 @@ sim_output <- run_simulation(
 )
 ```
 
+---
+
+### Step three: Load observed data
+
 For observed data, we create a small dataset using the **rtdists** package, which provides fast simulators for standard DDM. Specifically, we simulate N=500 trials from a two-boundary DDM with fixed parameters ($a$,$v$,$t0$) where a controls boundary separation, $v$ is the drift rate, and $t0$ captures non-decision time.
 
 The function *rdiffusion()* returns response labels (“upper”/“lower”) and response times. For consistency with the data format produced by our simulation engine, we recode responses into a numeric choice variable (1 for the upper boundary and -1 for the lower boundary), and we add a condition_idx field to indicate that all trials belong to a single experimental condition
@@ -199,6 +218,10 @@ observed_data <- rdiffusion(n = N, a = pars$a, v = pars$v, t0 = pars$t0)
 observed_data$choice <- ifelse(observed_data $response == "upper", 1, -1)
 observed_data$condition_idx <- 1
 ```
+
+---
+
+### Step four: Extract summary statistics
 
 we define a summary pipeline that extracts two types of common summary statistics of the DDM data: (i) the accuracy and (ii) RT quantiles (10%, 30%, 50%, 70%, 90%) computed separately for each choice category (1 vs. -1).
 
@@ -241,6 +264,10 @@ abc_input <- build_abc_input(
 )
 ```
 
+---
+
+### Step five: Fit the model
+
 With the simulated and observed summary statistics aligned, we can now estimate the posterior distribution of the model parameters using Approximate Bayesian Computation (ABC).
 
 Specifically, we fit an ABC model by comparing the simulated summary statistics to the observed summary statistics. Then we retain (or reweight) parameter draws that best reproduce the observed summaries under a tolerance level (tol=0.05).
@@ -268,6 +295,8 @@ abc_fit <- abc::abc(
 #> 12345678910
 ```
 
+---
+
 After fitting, we summarize the posterior means/medians and 95% credible intervals and visualize the resulting posterior distributions.
 
 As shown, the true parameter values underlying the observed data lie well within the 95% credible intervals of the posterior distributions.
@@ -292,6 +321,10 @@ plot_posterior_parameters(
 
 ![plot of chunk unnamed-chunk-8](./10-minimal-workflow/unnamed-chunk-8-1.svg)
 
+---
+
+### Step six: Model evaluation
+
 The next step is to evaluate parameter recovery for the model. To do so, we run *cv4abc()* as a cross-validation procedure.
 
 First, we specify the number of validation datasets (N=100). The function then randomly samples N conditions from the simulated summary statistics, treats their associated parameter values as known ground truth, and re-estimates the parameters using the fitted ABC object under the same tolerance level.
@@ -314,9 +347,11 @@ plot_cv_recovery(
   resid_tol = 0.99,
   interactive = FALSE
 )
+#> Error:
+#> ! object 'abc_cv' not found
 ```
 
-![plot of chunk unnamed-chunk-9](./10-minimal-workflow/unnamed-chunk-9-1.svg)
+---
 
 As a final diagnostic, we perform a posterior predictive check to assess the adequacy of the fitted model.
 
@@ -391,6 +426,9 @@ plot_accuracy(
 ```
 
 ![plot of chunk unnamed-chunk-10](./10-minimal-workflow/unnamed-chunk-10-2.svg)
+---
+
+### Step seven (optional): Model comparison
 
 Beyond parameter estimation, the **eam** package also supports model comparison within a simulation-based inference framework.
 
@@ -476,6 +514,8 @@ summary(postpr_result)
 According to the results, the model comparison indicated moderate evidence in favor of the model with $\rho = 0.5$ (the correct $\rho$ configuration) over the model with $\rho = 0.7$ (the incorrect $\rho$ configuration), with a posterior probability of 0.87 and a Bayes factor of approximately 6.7.
 
 This is the end of this example.
+
+---
 
 This simple DDM example serves as a reference template for the rest of the tutorial. Once this workflow is clear, extending it to more complex models in eam mainly involves modifying the model components, while the overall inference pipeline remains unchanged.
 
