--- a/vignettes/30-empirical-example.Rmd
+++ b/vignettes/30-empirical-example.Rmd
@@ -9,15 +9,9 @@ This section presents a real-world example illustrating how the proposed simulat
 
 Here, we used the free recall data from Penn Electrophysiology of Encoding and Retrieval Study (PEERS; Kahana et al., 2024). We model the recall process using a multi-response Racing Diffusion Model (RDM), focusing on RTs for first seven retrievaled items.
 
+---
 
-``` r
-# Load necessary packages
-library(eam)
-library(dplyr)
-
-# Set a random seed for reproducibility
-set.seed(1)
-```
+### Descriptions of the model
 
 The details of this model are listed below:
 
@@ -72,6 +66,24 @@ A response is generated when one accumulator first reaches the decision boundary
 RT_i = T_{\text{decision},i} + ndt_i .
 \]
 
+---
+
+### Step one: Model setup
+
+First, we load the required packages.
+
+
+``` r
+# Load necessary packages
+library(eam)
+library(dplyr)
+
+# Set a random seed for reproducibility
+set.seed(1)
+```
+
+Then, we specify the model configuration according to the setup described above.
+
 
 ``` r
 #######################
@@ -117,6 +129,11 @@ noise_factory <- function(context) {
   }
 }
 ```
+
+---
+
+### Step two: Data simulation
+
 When parallelization is enabled, running the full simulation typically takes approximately 30 minutes to 1 hour. Given the computational constraints of this tutorial, we do not execute the full pipeline here. Interested readers are encouraged to run the code locally to reproduce the results.
 
 
@@ -154,6 +171,11 @@ sim_output <- run_simulation(
   output_dir = temp_output_path
 )
 ```
+
+---
+
+### Step three: Load observed data
+
 For illustration purposes, we use data from one representative participant in the PEERS dataset as the observed data in this example.
 
 
@@ -164,6 +186,11 @@ For illustration purposes, we use data from one representative participant in th
 
 observed_data<-read.csv("./30-empirical-example/example_data.csv")
 ```
+
+---
+
+### Step four: Extract summary statistics
+
 Here we calcualte the response time quantiles (0.1–0.9) separately for each response position ("rank_idx").
 
 
@@ -199,6 +226,10 @@ abc_input <- build_abc_input(
 )
 
 ```
+
+---
+
+### Step five: Fit the model
 
 As the simulation step is omitted here, the inference code below is presented without being executed. Readers can run the complete inference pipeline locally once the simulated data have been generated.
 
@@ -246,6 +277,11 @@ plot_posterior_parameters(
   abc_input
 )
 ```
+
+---
+
+### Step six: Model evaluation
+
 Here, we directly present results from a previously fitted model and assess model adequacy by examining the overlap between RTs simulated from the posterior median and the RTs.
 
 
@@ -309,7 +345,7 @@ plot_rt(
 
 The results showed that, when fitted to the model, the estimated parameters accurately captured the shape of the observed reaction time distributions, thereby providing support for the validity of the model.
 
-\bigskip
+---
 
 Reference:
 
